--- a/AM/.project
+++ b/AM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>am1</name>
+	<name>AM</name>
 	<comment></comment>
 	<projects>
 	</projects>
