--- a/AMDashboard/src/main/webapp/WEB-INF/web.xml
+++ b/AMDashboard/src/main/webapp/WEB-INF/web.xml
@@ -49,5 +49,9 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <welcome-file-list>
+  <welcome-file>/member/login.jsp</welcome-file>
+</welcome-file-list>
 
 </web-app>
