about에 지도추가, 고객센터 하는 중

--- a/AM/pom.xml
+++ b/AM/pom.xml
@@ -123,6 +123,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		  <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>1.6.2</version>
+		</dependency>
+		    
 
 		<!-- Spring -->
 		<dependency>
