--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 */target/**
 /jspwork/
+*/.settings/**
 /target/
 
 ### Eclipse ###
@@ -14,6 +15,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
+.settings/
 .loadpath
 .recommenders
 
@@ -63,8 +65,10 @@ local.properties
 
 ### Eclipse Patch ###
 # Eclipse Core
+.project
 
 # JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 # Annotation Processing
 .apt_generated
